italic gray blockquote

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,10 @@
     margin-top: 15px;
     margin-bottom: 10px;
   }
+  blockquote {
+    color: darkgray;
+    font-style: italic;
+  }
 }
 
 @layer components {
