--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,17 +11,17 @@ import Layout from "../layouts/Layout.astro";
   <main class="space-y-4">
     <p>Hi! I'm Héctor.</p>
     <p>
-      I'm a software engineer from Spain and I love to build things that runs in
-      the backgroud (a way to say backend developer).
+      I'm a software engineer from Spain, passionate about building backend
+      systems that work seamlessly in the background.
     </p>
     <p>
-      At <a href="https://emailmeter.com">Email Meter</a>, where I currently
-      work, I manage tons of real-time data every day with tools like Python,
-      BigQuery, Dataflow and IA models for automatic categorization.
+      At <a href="https://emailmeter.com">Email Meter</a>, I handle vast amounts
+      of real-time data daily using Python, BigQuery, Dataflow, and AI for
+      automated categorization.
     </p>
     <p>
-      I love analog photography. You can check my photos in <a href="/gallery"
-        >/gallery</a
+      I also love analog photography — feel free to explore my work in <a
+        href="/gallery">/gallery</a
       >.
     </p>
     <p>🙋🏻‍♂️ 🇪🇸 ❤️ 🛠️ 🐍 📷</p>
