--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@ import Layout from "../layouts/Layout.astro";
     <p>Hi! I'm Héctor.</p>
     <p>
       I'm a software engineer from Spain, passionate about building backend
-      systems that work seamlessly in the background.
+      systems that run quietly and unnoticed in the background (that means they
+      work).
     </p>
     <p>
       At <a href="https://emailmeter.com">Email Meter</a>, I handle vast amounts
