--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,6 +4,12 @@ import ThemeToggle from "./ThemeToggle.astro";
 ---
 
 <header class="mb-6 flex items-center justify-between" transition:name="header">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="hache.xyz" />
+  <link rel="manifest" href="/site.webmanifest" />
   <nav class="flex items-center gap-4">
     <a href="/"> home </a>
     <a href="/blog"> blog </a>
