--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,9 @@
     h2 {
       @apply my-4 text-lg font-medium dark:text-white;
     }
-    h3,
+    h3 {
+      @apply my-4 text-base font-bold dark:text-white;
+    }
     h4,
     h5,
     h6 {
