--- a/src/pages/gallery/index.astro
+++ b/src/pages/gallery/index.astro
@@ -1,36 +1,43 @@
 ---
 import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
+import Layout from "../../layouts/Layout.astro";
 
 const albums = await getCollection("albums");
 ---
 
-<div class="p-8">
-    <h1 class="my-8 text-center text-5xl font-bold">Gallery</h1>
-    <div class="container mx-auto grid max-w-screen-sm grid-cols-2 gap-8">
-        {
-            albums.map((item) => (
-                <a
-                    href={`/gallery/${item.id}`}
-                    class="group mb-4 block transition-all"
-                >
-                    <Image
-                        src={item.data.cover}
-                        alt={item.data.title}
-                        format="avif"
-                        width={720}
-                        quality="mid"
-                        class:list={[
-                            "rounded-lg transition-all",
-                            "group-hover:opacity-90 group-hover:shadow-lg",
-                        ]}
-                    />
-                    <div class="mt-4 text-center text-neutral-700">
-                        <strong class="font-normal">{item.data.title}</strong>
-                        <p class="text-xs">{item.data.description}</p>
-                    </div>
-                </a>
-            ))
-        }
+<Layout title="Gallery" description="Explore my analog photography work">
+    <div class="p-8">
+        <h1 class="my-8 text-center text-5xl font-bold">Gallery</h1>
+        <div class="container mx-auto grid max-w-screen-sm grid-cols-2 gap-8">
+            {
+                albums.map((item) => (
+                    <a
+                        href={`/gallery/${item.id}`}
+                        class="group mb-4 block transition-all"
+                    >
+                        <Image
+                            src={item.data.cover}
+                            alt={item.data.title}
+                            format="avif"
+                            width={720}
+                            quality="mid"
+                            class:list={[
+                                "rounded-lg transition-all",
+                                "group-hover:opacity-90 group-hover:shadow-lg",
+                            ]}
+                        />
+                        <div class="mt-4 text-center text-neutral-700 dark:text-neutral-300">
+                            <strong class="font-normal">
+                                {item.data.title}
+                            </strong>
+                            <p class="text-xs dark:text-white">
+                                {item.data.description}
+                            </p>
+                        </div>
+                    </a>
+                ))
+            }
+        </div>
     </div>
-</div>
+</Layout>
