--- a/src/pages/gallery/[id].astro
+++ b/src/pages/gallery/[id].astro
@@ -28,26 +28,33 @@ const images = await getAlbumImages(album.id);
 <Layout title={album.data.title} description={album.data.description || ""}>
     <div class="my-16 mb-32 text-center">
         <h1 class="text-5xl font-bold">{album.data.title}</h1>
-        <p class="mt-4 text-lg text-neutral-700 dark:text-neutral-200">
+        <h2 class="mt-4 text-lg text-neutral-700 dark:text-neutral-200">
             {album.data.description}
+        </h2>
+        <h3 class="mt-4 text-sm text-neutral-500 dark:text-neutral-400">
+            {album.data.film && `Film: ${album.data.film}`}<br />
+            {album.data.camera && `Camera: ${album.data.camera}`}
+        </h3>
+        <p class="mt-4 text-sm text-neutral-500 dark:text-neutral-400">
+            {images.length} images
+            <div
+                class="container mx-auto my-8 sm:columns-2 md:columns-3 lg:columns-4 xl:columns-5"
+            >
+                {
+                    images.map((image) => (
+                        <div data-lightbox="true">
+                            <Image
+                                src={image}
+                                alt={`Image from ${album.data.title} album`}
+                                format="avif"
+                                quality={50}
+                                class="mb-4 rounded border border-transparent transition-all duration-300 ease-in-out hover:border-gray-300 hover:shadow-lg"
+                                loading="lazy"
+                            />
+                        </div>
+                    ))
+                }
+            </div>
         </p>
-        <div
-            class="container mx-auto my-8 sm:columns-2 md:columns-3 lg:columns-4 xl:columns-5"
-        >
-            {
-                images.map((image) => (
-                    <div data-lightbox="true">
-                        <Image
-                            src={image}
-                            alt={`Image from ${album.data.title} album`}
-                            format="avif"
-                            quality={50}
-                            class="mb-4 rounded border border-transparent transition-all duration-300 ease-in-out hover:border-gray-300 hover:shadow-lg"
-                            loading="lazy"
-                        />
-                    </div>
-                ))
-            }
-        </div>
     </div>
 </Layout>
