--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,4 @@
 ---
-import { EMAIL } from "../consts";
 import ThemeToggle from "./ThemeToggle.astro";
 ---
 
@@ -14,7 +13,7 @@ import ThemeToggle from "./ThemeToggle.astro";
     <a href="/"> home </a>
     <a href="/blog"> blog </a>
     <a href="/gallery"> photos </a>
-    <a href={`mailto:${EMAIL}`}>email</a>
+    <a href="/contact">+</a>
   </nav>
   <ThemeToggle />
 </header>
