--- a/src/pages/gallery/index.astro
+++ b/src/pages/gallery/index.astro
@@ -33,7 +33,7 @@ const albums = await getCollection("albums");
                                 {item.data.title}
                             </strong>
                             <p class="text-s mt-2 dark:text-neutral-400">
-                                {item.data.description}
+                                {item.data.short_description}
                             </p>
                             <p class="mt-2 text-xs dark:text-neutral-400">
                                 {item.data.film && `🎞️ ${item.data.film}`}{" "}
