--- a/src/pages/gallery/[id].astro
+++ b/src/pages/gallery/[id].astro
@@ -50,6 +50,7 @@ const images = await getAlbumImages(album.id);
                                 quality={50}
                                 class="mb-4 rounded border border-transparent transition-all duration-300 ease-in-out hover:border-gray-300 hover:shadow-lg"
                                 loading="lazy"
+                                decoding="async"
                             />
                         </div>
                     ))
