--- a/src/pages/gallery/[id].astro
+++ b/src/pages/gallery/[id].astro
@@ -47,9 +47,9 @@ const images = await getAlbumImages(album.id);
                                 src={image}
                                 alt={`Image from ${album.data.title} album`}
                                 format="avif"
-                                quality={50}
+                                quality={60}
                                 class="mb-4 rounded border border-transparent transition-all duration-300 ease-in-out hover:border-gray-300 hover:shadow-lg"
-                                loading="lazy"
+                                loading="eager"
                                 decoding="async"
                             />
                         </div>
